--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -607,7 +607,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NWg-i8-uKV" id="9gp-0O-fKi">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -638,7 +638,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NZv-Py-NfV" id="bed-HF-mux">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -666,7 +666,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hOM-h3-clb" id="haU-Wm-fie">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="49.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -852,7 +852,7 @@
                                 <rect key="frame" x="0.0" y="86" width="600" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VSI-oZ-nxd" id="emG-AP-STX">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndg-wR-OIq">
@@ -967,7 +967,7 @@
                                         <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M8e-bd-zuC">
-                                        <rect key="frame" x="81" y="32" width="378" height="30"/>
+                                        <rect key="frame" x="54" y="32" width="432" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="M8L-gt-dKq"/>
                                         </constraints>
@@ -975,7 +975,7 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9wg-ge-abF">
-                                        <rect key="frame" x="81" y="72" width="378" height="30"/>
+                                        <rect key="frame" x="54" y="72" width="432" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="cfG-7f-Q6J"/>
                                         </constraints>
@@ -983,7 +983,7 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Re-type password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XCh-zd-wuJ">
-                                        <rect key="frame" x="81" y="112" width="378" height="30"/>
+                                        <rect key="frame" x="54" y="112" width="432" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="ddH-fK-KQB"/>
                                         </constraints>
@@ -991,7 +991,7 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="La9-5i-mqZ">
-                                        <rect key="frame" x="81" y="152" width="378" height="30"/>
+                                        <rect key="frame" x="54" y="152" width="432" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="XSi-sy-43p"/>
                                         </constraints>
@@ -999,7 +999,7 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By clicking the button below, I certify that I am 13 years of age or older." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNT-x5-eXT">
-                                        <rect key="frame" x="54" y="192" width="432" height="17"/>
+                                        <rect key="frame" x="38" y="192" width="464" height="17"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -1019,12 +1019,12 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="9wg-ge-abF" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.7" id="Bpd-jd-u5Y"/>
-                                    <constraint firstItem="M8e-bd-zuC" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.7" id="Cwf-9O-hRv"/>
-                                    <constraint firstItem="XCh-zd-wuJ" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.7" id="GqB-K3-cXL"/>
-                                    <constraint firstItem="rNT-x5-eXT" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="W5d-6c-viK"/>
+                                    <constraint firstItem="9wg-ge-abF" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="Bpd-jd-u5Y"/>
+                                    <constraint firstItem="M8e-bd-zuC" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="Cwf-9O-hRv"/>
+                                    <constraint firstItem="XCh-zd-wuJ" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="GqB-K3-cXL"/>
+                                    <constraint firstItem="rNT-x5-eXT" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.86" id="W5d-6c-viK"/>
                                     <constraint firstItem="40P-NH-G2D" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.5" id="eru-ix-jBi"/>
-                                    <constraint firstItem="La9-5i-mqZ" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.7" id="mJV-fx-sgb"/>
+                                    <constraint firstItem="La9-5i-mqZ" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="mJV-fx-sgb"/>
                                     <constraint firstItem="40P-NH-G2D" firstAttribute="centerX" secondItem="r7b-bU-Spd" secondAttribute="centerX" id="uN0-uu-Pf2"/>
                                 </constraints>
                             </stackView>
@@ -1093,7 +1093,7 @@
                                             <constraint firstAttribute="height" constant="40" id="lVR-ws-4Jw"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Wj-Vk-Nx6">
                                         <rect key="frame" x="54" y="131" width="432" height="40"/>
@@ -1101,7 +1101,7 @@
                                             <constraint firstAttribute="height" constant="40" id="sDy-sr-7aW"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="ZHg-6x-4CX">
                                         <rect key="frame" x="54" y="201" width="432" height="40"/>
@@ -1193,7 +1193,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gkg-pY-SVs" id="OAA-3p-knm">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6C-9l-aN2" userLabel="Name Label">
